doc: thesis discussion wip

--- a/thesis/literatur.bib
+++ b/thesis/literatur.bib
@@ -139,3 +139,11 @@ series = {HPG '13}
   pages={1--19},
   year={2022}
 }
+
+@INPROCEEDINGS{4634620,
+  author={Wald, Ingo and Benthin, Carsten and Boulos, Solomon},
+  booktitle={2008 IEEE Symposium on Interactive Ray Tracing}, 
+  title={Getting rid of packets - Efficient SIMD single-ray traversal using multi-branching BVHs -}, 
+  year={2008},
+  pages={49-57}
+}
