--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -676,9 +676,16 @@ Fortlaufend bietetet es sich an die Stichprobe an Szenen zu erweitern. Mehr und 
 
 \newpage
 \chapter{Fazit}
-Es gibt klare Ergebisse für CPU-basiertes Raycasting in statischen Szenen. 
+Der Fokus dieser Arbeit war die anaylstische Bewertung der Qualität von Top-Down konstruiierten Wide BVHs in statischen 3D Szenen aufbauend auf serieller Berechnungen. Dabei gab es das Ziel herauszufinden, ob Wide BVH alleinig auf struktureller bzw. algorithmischer Ebene einen Vorteil gegenüber binärer BVHs innehaben, auch wenn der Vorteil der parallelisierten Berechnung wegfällt.
 
+Im Rahmen der ersten Forschungsfrage zeigten die Messungen einen statistisch signifikanten, wenn auch kleinen Vorteil durch verwendung einer BVH mit Verzweigungsgrad $k = 4$, gegenüber $k = 2$, in statischen Szenen. Für alle untersuchten Szenen und Algorithmen liegt der Speedup zwischen $1,03$ und $1,08$ für Mittelwerte. Die Qualität der BVH nimmt für $k \ge 8$ deutlich ab mit Speedup-Mittelwerten von $0,63$ bi $0,77$ für $k = 8$ und fällt für $k = 16$ sogar auf Werte zwischen $0,10$ und $0,19$. Damit lässt sich für das gewählte Szenario unter gleichen Voraussetzungn eine Empfehlung für die Nutzung von Wide BVH mit $k = 4$ aussprechen.
 
+Die Untersuchung der zweiten Forschungsfrage hat ergeben, dass es keinen praktischen Unterschied zwischen der Nutzung der untersuchten Arten der Erzeugung von Wide BVHs in den untersuchten Szenen gibt. Über alle Konfigurationen hinweg ist der Speedup zwischen k-way splitting und collapsing ohne signifikante Abweichung nahe $1$. Damit ist die Empfehlung die gewählte Methode nach Implementierungsaufwand und Construction-Time zu wählen.
+
+Für die Modellierung einer dynamischen Szene durch eine kombinierte Metrik aus \linebreak Construction- und Traversal-Time im Rahmen der letzten Forschungsfrage, bleiben die Ergebnisse ähnlich zur ersten Frage. Verzweigungsgrad $k = 4$ liefert insgesamt die besten Ergebnisse, während $k \ge 8$ auch in diesem Fall schlechtere Metriken liefern. Zudem lassen sich Indizien dinden, dass der Vorsprung von $k = 4$ mit setigender Szenengröße abzunehmen scheint bzw. sogar komplett ausbleiben oder sich umkehren kann. Damit kann man sagen, dass auch in diesem Zusammenhang zumindest für die kleineren Untersuchten Szenen ein Vorteil für BVHs mit Verzweigungsgrad $k = 4$ existiert.
+
+Zusammengefasst lässt sich sagen, dass falls Wide BVHs in der seriellen Berechnung auf der CPU eingesetzt werden, man sich für einen Verzweigungsgrad von $k = 4$ entscheiden sollte, während Verzweigungsgrade $k \ge 8$ vermieden werden sollten.
+Ein wichtiger nächster Schritt wäre die Messungen mit einer größeren Menge an Szenen mit höherer Polygonanzahl durchuzuführen, um die Indizien eines abnehmenden Vorteils zu untersuchen und belegbare Aussagen treffen zu können. Zudem wäre es interessant das Verhalten der BVHs unter der Nutzung von anderen Ray-Verteilungen durch beispielsweise Shader-Berechnung mit Hilfe von Sekundärestrahlen oder Ähnlichem zu beleuchten.
 
 \newpage
 \chapter{Appendix}
@@ -686,6 +693,7 @@ Es gibt klare Ergebisse für CPU-basiertes Raycasting in statischen Szenen.
 \begin{center}
     \input{results/static_statistical_results_table.tex}
     \input{results/comparison_statistical_results_table.tex}
+    \input{results/dynamic_statistical_results_table.tex}
 \end{center}
 
 \printbibliography
