doc: thesis rework introduction

--- a/thesis/literatur.bib
+++ b/thesis/literatur.bib
@@ -147,3 +147,22 @@ series = {HPG '13}
   year={2008},
   pages={49-57}
 }
+
+@misc{teapot,
+  author = {Newel, Martin},
+  title  = {The Utah Teapot},
+  note   = {URL: \url{https://graphics.cs.utah.edu/teapot/}, Zugriff am: 2. Februar 2026}
+}
+
+@misc{stanford,
+  author = {Stanford University Computer Graphics Laboratory},
+  title  = {The Stanford 3D Scanning Repository},
+  note   = {URL: \url{https://graphics.stanford.edu/data/3Dscanrep/}, Zugriff am: 2. Februar 2026}
+}
+
+@misc{blender,
+  author = {blender},
+  title  = {The Cycles Render Engine},
+  note   = {URL: \url{https://github.com/blender/cycles/blob/main/examples/objects/suzanne.xml}, Zugriff am: 2. Februar 2026}
+}
+
